home screen completed

--- a/index.html
+++ b/index.html
@@ -160,18 +160,54 @@
 
 
               </div>
-              <div class="col">
+              <div class="col home-col-3">
                 <div>
                     <!-- Actual search box -->
                     <div class="form-group has-search">
                         <span class="fa fa-search form-control-feedback"></span>
-                        <input type="text" class="form-control" placeholder="Search">
+                        <input type="text" class="form-control" placeholder="Buscar">
                     </div>
                 </div>
 
-                <div>
-                    tips and tricks
+                <div class="tpi-home-activities-counter">
+                    <div class="row">
+                        <div class="col-4">
+                            <h1 class="font-weight-bold">10</h1>
+                        </div>
+                        <div class="col-8">
+                            Actividades Completadas
+                        </div>
+                    </div>
                 </div>
+
+                <div class="tpi-home-activities-counter">
+                    <div class="row">
+                        <div class="col-4">
+                            <h1 class="font-weight-bold">4</h1>
+                        </div>
+                        <div class="col-8">
+                            Actividades Pendientes
+                        </div>
+                    </div>
+                </div>
+
+
+                
+                <div class="tpi-tip-card">
+                    <div class="font-weight-bold">Consejo del día</div>
+                    <div class="row">
+                        <div class="col tpi-tip-card-title">
+                            Es importante que el papel se recicle para aprovecharlo. Puedes imprimir a doble cara y enseñarle a tu hijo que se puede dibujar por ambos lados de una hoja.
+                        </div>
+                        <div class="col">
+                            <img src="src/img/tip_brain.svg" alt="tip_brain"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <button type="button" class="btn btn-warning  btn-block tpi-tip-card-button">Abrir</button>
+                    </div>
+                </div>
+                
               </div>
             </div>
         </div>
