--- a/stories-home.html
+++ b/stories-home.html
@@ -48,7 +48,9 @@
                                     </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="src/img/story_1.png" class="d-block tpi-story-img" alt="story_1">
+                                            <a href="stories/1/1.html">
+                                                <img src="src/img/story_1.png" class="d-block tpi-story-img" alt="story_1">
+                                            </a>
                                             <div class="carousel-caption d-none d-md-block tpi-story-caption">
                                                 <h5 class="tpi-story-caption-title">La tierra está triste</h5>
                                                 <i class="fas fa-star star-on"></i>
@@ -63,7 +65,9 @@
                                             </div>
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="src/img/story_2.png" class="d-block tpi-story-img" alt="story_2">
+                                            <a href="stories/2/1.html">
+                                                <img src="src/img/story_2.png" class="d-block tpi-story-img" alt="story_2">
+                                            </a>
                                             <div class="carousel-caption d-none d-md-block tpi-story-caption">
                                                 <h5 class="tpi-story-caption-title">¡Que se nos cae un planeta!</h5>
                                                 <i class="fas fa-star star-on"></i>
@@ -118,6 +122,13 @@
                                     </a>
                                 </div>
                             </div>
+                            
+                        </div>
+
+                        <div class="w-100 text-right tpi-stories-back-button">
+                            <a href='./index.html'>
+                                <button type="button" class="btn btn-warning w-100">Regresar</button>
+                            </a>
                         </div>
                         
                     </div>               
