--- a/stories/1/4.html
+++ b/stories/1/4.html
@@ -25,8 +25,15 @@
                 <div class="col story-background">
                     <div class="row">
                         <div class="col">
+
+                            <div class="tpi-paragraph">
+                                <p>Unos niños que estaban jugando en la calle escucharon la conversación.</p>
+                                <p>- ¡Tierra, Tierra! ¡No llores más, por favor! - gritaron con todas su fuerzas para que los oyera.</p>
+                                <p>- ¡Decidme pequeños! - les dijo tragándose las lágrimas.</p>
+                            </div>
+
                             <div>
-                                <img src="../../src/img/story_1.png" class="d-block story-img" alt="story_1">
+                                <img src="../../src/img/story_img_6.png" class="d-block story-img" alt="story_6">
                             </div>
                             <div>
                                 <h2 class="text-center w-100 story-title" >La tierra está triste</h2>
@@ -35,19 +42,30 @@
                         </div>
                         <div class="col-1"></div>
                         <div class="col">
-                            <img src="../../src/img/story_img_1.png" class="d-block story-img" alt="story_img_1">
+
+                            <img src="../../src/img/story_img_7.png" class="d-block story-img" alt="story_img_7">
 
                             <div class="tpi-paragraph">
-                                <p>Habían hecho una reunión en el universo.</p>
-                                <p>- La Tierra tiene muy mala cara - dijo la luna.</p>
-                                <p>- ¡Tienes razón; está muy apagada! - asintió el sol.</p>
-                                <p>- He oído que la gente que vive en ese planeta no la cuida nada bien - dijeron las estrellas.</p>
-                                <p>- ¡Creemos que está enferma! - exclamaron las osas.</p>
+                                <p>- ¡Nosotros te vamos a cuidar! ¡No permitiremos que mueras! - prometieron con voz temblorosa.</p>
+                                <p>La Tierra entonces sintió un enorme alivio cuando vio la transparencia de sus ojos; solo esperaba que de adultos no olvidaran su promesa</p>
+                                <p>FIN!</p>
                             </div>
+
+                            <div class="w-100 text-right">
+                                <a href='../../stories-home.html'>
+                                    <button type="button" class="btn btn-warning w-100">Lee otro cuento!</button>
+                                </a>
+                            </div>
+
                         </div>
-                        <a href='./2.html' class="story-next-button">
-                            <button type="button" class="btn btn-warning story-next-button"><i class="fas fa-arrow-right"></i></button>
+
+                        <a href='./3.html' class="story-prev-button">
+                            <button type="button" class="btn btn-warning story-prev-button"><i class="fas fa-arrow-left"></i></button>
                         </a>
+
+                        
+                        
+
                     </div>          
                 </div>
             </div>
