--- a/stories/2/2.html
+++ b/stories/2/2.html
@@ -25,29 +25,34 @@
                 <div class="col story-background">
                     <div class="row">
                         <div class="col">
-                            <div>
-                                <img src="../../src/img/story_1.png" class="d-block story-img" alt="story_1">
+
+                            <div class="tpi-paragraph">
+                                <p>Y todos se acercaron al planeta para preguntarle qué le pasaba.</p>
+                                <p>- ¡Hola Tierra! ¿Te encuentras bien? - habló primero la luna.</p>
                             </div>
-                            <div>
-                                <h2 class="text-center w-100 story-title" >La tierra está triste</h2>
-                            </div>
+
+                            <img src="../../src/img/story_img_2.png" class="d-block story-img" alt="story_img_2">
                             
                         </div>
                         <div class="col-1"></div>
                         <div class="col">
-                            <img src="../../src/img/story_img_1.png" class="d-block story-img" alt="story_img_1">
+                            <img src="../../src/img/story_img_3.png" class="d-block story-img" alt="story_img_3">
 
                             <div class="tpi-paragraph">
-                                <p>Habían hecho una reunión en el universo.</p>
-                                <p>- La Tierra tiene muy mala cara - dijo la luna.</p>
-                                <p>- ¡Tienes razón; está muy apagada! - asintió el sol.</p>
-                                <p>- He oído que la gente que vive en ese planeta no la cuida nada bien - dijeron las estrellas.</p>
-                                <p>- ¡Creemos que está enferma! - exclamaron las osas.</p>
+                                <p>La Tierra la miró con los ojos llenos de lágrimas y no pudo contestar.</p>
+                                <p>- ¡Nos estás asustando, Tierra! ¿Qué te sucede? - preguntaron de nuevo las estrellas muy preocupadas.</p>
+                                <p>- ¡Cuéntanos! - insistieron todos.</p>
                             </div>
                         </div>
-                        <a href='./2.html' class="story-next-button">
+
+                        <a href='./1.html' class="story-prev-button">
+                            <button type="button" class="btn btn-warning story-prev-button"><i class="fas fa-arrow-left"></i></button>
+                        </a>
+
+                        <a href='./3.html' class="story-next-button">
                             <button type="button" class="btn btn-warning story-next-button"><i class="fas fa-arrow-right"></i></button>
                         </a>
+                        
                     </div>          
                 </div>
             </div>
