--- a/stories/2/3.html
+++ b/stories/2/3.html
@@ -26,26 +26,31 @@
                     <div class="row">
                         <div class="col">
                             <div>
-                                <img src="../../src/img/story_1.png" class="d-block story-img" alt="story_1">
+                                <img src="../../src/img/story_img_4.png" class="d-block story-img" alt="story_4">
                             </div>
-                            <div>
-                                <h2 class="text-center w-100 story-title" >La tierra está triste</h2>
+ 
+                            <div class="tpi-paragraph">
+                                <p>- Creo que las personas no son conscientes del daño que se están haciendo - contestó muy triste</p>
+                                <p>La luna, el sol, las estrellas y las dos osas la miraron callados esperando que continuara hablando.</p>
                             </div>
-                            
+  
                         </div>
                         <div class="col-1"></div>
                         <div class="col">
-                            <img src="../../src/img/story_img_1.png" class="d-block story-img" alt="story_img_1">
 
                             <div class="tpi-paragraph">
-                                <p>Habían hecho una reunión en el universo.</p>
-                                <p>- La Tierra tiene muy mala cara - dijo la luna.</p>
-                                <p>- ¡Tienes razón; está muy apagada! - asintió el sol.</p>
-                                <p>- He oído que la gente que vive en ese planeta no la cuida nada bien - dijeron las estrellas.</p>
-                                <p>- ¡Creemos que está enferma! - exclamaron las osas.</p>
+                                <p>- Los hombres están quemando bosques, talando árboles, llenando el mar de basura, exterminando a los animales - dijo llorando.</p>
+                                <p>- El calentamiento global está deshelando mis polos. ¿¡Cómo no se dan cuenta!? ¡Están destruyendo la naturaleza! - dijo tapándose la cara que ahora lucía colorada y febril.</p>
                             </div>
+
+                            <img src="../../src/img/story_img_5.png" class="d-block story-img" alt="story_img_5">
                         </div>
-                        <a href='./2.html' class="story-next-button">
+
+                        <a href='./2.html' class="story-prev-button">
+                            <button type="button" class="btn btn-warning story-prev-button"><i class="fas fa-arrow-left"></i></button>
+                        </a>
+
+                        <a href='./4.html' class="story-next-button">
                             <button type="button" class="btn btn-warning story-next-button"><i class="fas fa-arrow-right"></i></button>
                         </a>
                     </div>          
