--- a/stories/2/1.html
+++ b/stories/2/1.html
@@ -26,23 +26,18 @@
                     <div class="row">
                         <div class="col">
                             <div>
-                                <img src="../../src/img/story_1.png" class="d-block story-img" alt="story_1">
+                                <img src="../../src/img/story2_1.png" class="d-block story-img" alt="story_1">
                             </div>
                             <div>
-                                <h2 class="text-center w-100 story-title" >La tierra está triste</h2>
+                                <h2 class="text-center w-100 story-title" >¡Que se nos cae un planeta!</h2>
                             </div>
                             
                         </div>
                         <div class="col-1"></div>
                         <div class="col">
-                            <img src="../../src/img/story_img_1.png" class="d-block story-img" alt="story_img_1">
-
+                            <img src="../../src/img/story2_img_1.png" class="d-block story-img" alt="story_img_1">
                             <div class="tpi-paragraph">
-                                <p>Habían hecho una reunión en el universo.</p>
-                                <p>- La Tierra tiene muy mala cara - dijo la luna.</p>
-                                <p>- ¡Tienes razón; está muy apagada! - asintió el sol.</p>
-                                <p>- He oído que la gente que vive en ese planeta no la cuida nada bien - dijeron las estrellas.</p>
-                                <p>- ¡Creemos que está enferma! - exclamaron las osas.</p>
+                                <p>La familia de Dina iba a vivir en un miniplaneta. <br> Hace algunos años, habría sido la mejor noticia. <br>Pero ahora todo el mundo sabía que los miniplanetas, esas pequeñas y lujosas islas de tierra que flotaban en el aire, acababan estrellándose contra el suelo.</p>
                             </div>
                         </div>
                         <a href='./2.html' class="story-next-button">
