--- a/stories/2/2.html
+++ b/stories/2/2.html
@@ -27,21 +27,18 @@
                         <div class="col">
 
                             <div class="tpi-paragraph">
-                                <p>Y todos se acercaron al planeta para preguntarle qué le pasaba.</p>
-                                <p>- ¡Hola Tierra! ¿Te encuentras bien? - habló primero la luna.</p>
+                                <p>Su misión era investigar el problema.<br>Por eso viajaban a uno que estaba empezando a perder altura.<br>Cuando llegaron quedaron sorprendidos: las casas eran increíbles, preciosas.<br>Todo era nuevo y brillante. Nadie diría que tuvieran problemas.</p>
                             </div>
 
-                            <img src="../../src/img/story_img_2.png" class="d-block story-img" alt="story_img_2">
+                            <img src="../../src/img/story2_img_2.png" class="d-block story-img" alt="story_img_2">
                             
                         </div>
                         <div class="col-1"></div>
                         <div class="col">
-                            <img src="../../src/img/story_img_3.png" class="d-block story-img" alt="story_img_3">
+                            <img src="../../src/img/story2_img_3.jpg" class="d-block story-img" alt="story_img_3">
 
                             <div class="tpi-paragraph">
-                                <p>La Tierra la miró con los ojos llenos de lágrimas y no pudo contestar.</p>
-                                <p>- ¡Nos estás asustando, Tierra! ¿Qué te sucede? - preguntaron de nuevo las estrellas muy preocupadas.</p>
-                                <p>- ¡Cuéntanos! - insistieron todos.</p>
+                                <p>Dina no tardó en hacerse amiga de uno de sus nuevos vecinos, un niño muy simpático que además tenía los mejores juguetes.<br>Un día, mientras Dina pilotaba uno de los preciosos drones de su amigo, un golpe de aire lo estrelló contra un árbol.</p>
                             </div>
                         </div>
 
