--- a/stories/2/3.html
+++ b/stories/2/3.html
@@ -26,12 +26,15 @@
                     <div class="row">
                         <div class="col">
                             <div>
-                                <img src="../../src/img/story_img_4.png" class="d-block story-img" alt="story_4">
+                                <img src="../../src/img/story2_img_4.png" class="d-block story-img" alt="story_4">
                             </div>
  
                             <div class="tpi-paragraph">
-                                <p>- Creo que las personas no son conscientes del daño que se están haciendo - contestó muy triste</p>
-                                <p>La luna, el sol, las estrellas y las dos osas la miraron callados esperando que continuara hablando.</p>
+                                <p>- No te preocupes, Toni. Lo arreglaré. En mi familia somos muy buenos arreglando cosas.<br>
+                                    - Olvídalo, Dina, compraremos otro. Mis papás tienen dinero de sobra.<br>
+                                    - ¿Y qué hacemos con este?<br>
+                                    - Lo tiraremos al núcleo. Es donde se tira todo lo que sobra.<br>
+                                    Dina pensó en la cantidad de cosas que habría en aquel lugar, y suplicó a Toni que se lo enseñara.</p>
                             </div>
   
                         </div>
@@ -39,11 +42,11 @@
                         <div class="col">
 
                             <div class="tpi-paragraph">
-                                <p>- Los hombres están quemando bosques, talando árboles, llenando el mar de basura, exterminando a los animales - dijo llorando.</p>
-                                <p>- El calentamiento global está deshelando mis polos. ¿¡Cómo no se dan cuenta!? ¡Están destruyendo la naturaleza! - dijo tapándose la cara que ahora lucía colorada y febril.</p>
+                                <p>- Ya casi no se puede entrar. Está demasiado lleno de chatarra y cosas viejas. Pero en unos días se aplastará todo para dejar un poco más de sitio - dijo Toni cuando llegaron.<br>
+                                    - Bueno, pues cogeremos cosas antes de que las aplasten. Nos servirán para inventar nuevos juguetes.</p>
                             </div>
 
-                            <img src="../../src/img/story_img_5.png" class="d-block story-img" alt="story_img_5">
+                            <img src="../../src/img/story2_img_5.jpg" class="d-block story-img" alt="story_img_5">
                         </div>
 
                         <a href='./2.html' class="story-prev-button">
