--- a/stories/2/5.html
+++ b/stories/2/5.html
@@ -25,35 +25,28 @@
                 <div class="col story-background">
                     <div class="row">
                         <div class="col">
-                            <div>
-                                <img src="../../src/img/story2_img_6.jpg" class="d-block story-img" alt="story_4">
-                            </div>
- 
                             <div class="tpi-paragraph">
-                                <p>Casi todas las cosas que encontraron estaban tan poco estropeadas que sus juguetes nuevos resultaron estupendos. Lo pasaron tan bien inventando, que otros niños se unieron a ellos. <br>
-                                    En unos días, todos los niños del miniplaneta pasaban las mañanas delante del núcleo para recoger lo que tiraban sus papás y utilizarlo para sus inventos. Muchos papás se sumaron a aquella moda tan divertida y comenzaron a arreglar e inventar cosas con lo que parecía que no servía.
-                                </p>
+                                <p>Tenía razón el inspector.<br>
+                                    Arreglar cosas era tan divertido que ya apenas tiraban nada, así que el núcleo estaba más vacío y llevaba tiempo sin tener que aplastarse.<br>
+                                    Y, como ahora pesaba siempre lo mismo, ya no se hundía.</p>
                             </div>
-  
+                            <div>
+                                <img src="../../src/img/story2_img_8.jpg" class="d-block story-img" alt="story_4">
+                            </div>
                         </div>
                         <div class="col-1"></div>
                         <div class="col">
-
+                            <img src="../../src/img/story2_img_9.png" class="d-block story-img" alt="story_img_5">
                             <div class="tpi-paragraph">
-                                <p>Una tarde, los papás de Dina llegaron gritando de alegría.<br>
-                                    - ¡Ya no se hunde! ¡El miniplaneta está recuperando su sitio!<br>
-                                    Pero ese mismo día, llegó también el inspector.<br>
-                                    - ¿Qué ha pasado aquí? ¡Ya no está todo nuevo y reluciente! ¿Y por qué nadie compra nada?</p>
+                                <p>Los papás de Dina le estuvieron explicando al inspector la causa del problema: no se puede estar metiendo cosas nuevas en un sitio si no se hace nada con las antiguas, porque para que quede bonito por fuera se está destrozando por dentro.</p>
                             </div>
-
-                            <img src="../../src/img/story2_img_7.jpg" class="d-block story-img" alt="story_img_5">
                         </div>
 
-                        <a href='./3.html' class="story-prev-button">
+                        <a href='./4.html' class="story-prev-button">
                             <button type="button" class="btn btn-warning story-prev-button"><i class="fas fa-arrow-left"></i></button>
                         </a>
 
-                        <a href='./5.html' class="story-next-button">
+                        <a href='./6.html' class="story-next-button">
                             <button type="button" class="btn btn-warning story-next-button"><i class="fas fa-arrow-right"></i></button>
                         </a>
                     </div>          
