--- a/stories/2/6.html
+++ b/stories/2/6.html
@@ -25,37 +25,41 @@
                 <div class="col story-background">
                     <div class="row">
                         <div class="col">
-                            <div>
-                                <img src="../../src/img/story2_img_6.jpg" class="d-block story-img" alt="story_4">
-                            </div>
- 
+
                             <div class="tpi-paragraph">
-                                <p>Casi todas las cosas que encontraron estaban tan poco estropeadas que sus juguetes nuevos resultaron estupendos. Lo pasaron tan bien inventando, que otros niños se unieron a ellos. <br>
-                                    En unos días, todos los niños del miniplaneta pasaban las mañanas delante del núcleo para recoger lo que tiraban sus papás y utilizarlo para sus inventos. Muchos papás se sumaron a aquella moda tan divertida y comenzaron a arreglar e inventar cosas con lo que parecía que no servía.
-                                </p>
+                                <p>Desde entonces nadie tiró o cambió cosas que pudiera arreglar o reutilizar, y dejaron de comprar cosas innecesarias. <br>
+                                    La verdad es que los miniplanetas ya no parecen por fuera tan nuevos y tan perfectos… pero por dentro su núcleo sí está perfecto y, además, ya no se caen.</p>
                             </div>
-  
+
+                            <div>
+                                <img src="../../src/img/story2_img_10.jpg" class="d-block story-img" alt="story_6">
+                            </div>
                         </div>
                         <div class="col-1"></div>
                         <div class="col">
 
+                            <img src="../../src/img/story2_img_11.jpg" class="d-block story-img" alt="story_img_7">
+
                             <div class="tpi-paragraph">
-                                <p>Una tarde, los papás de Dina llegaron gritando de alegría.<br>
-                                    - ¡Ya no se hunde! ¡El miniplaneta está recuperando su sitio!<br>
-                                    Pero ese mismo día, llegó también el inspector.<br>
-                                    - ¿Qué ha pasado aquí? ¡Ya no está todo nuevo y reluciente! ¿Y por qué nadie compra nada?</p>
+                                <p>Por cierto, no sé si tú vives en algún planeta, pero igual te vendría bien hacer lo mismo…<br>
+                                    FIN!</p>
                             </div>
 
-                            <img src="../../src/img/story2_img_7.jpg" class="d-block story-img" alt="story_img_5">
+                            <div class="w-100 text-right">
+                                <a href='../../stories-home.html'>
+                                    <button type="button" class="btn btn-warning w-100">Lee otro cuento!</button>
+                                </a>
+                            </div>
+
                         </div>
 
-                        <a href='./3.html' class="story-prev-button">
+                        <a href='./5.html' class="story-prev-button">
                             <button type="button" class="btn btn-warning story-prev-button"><i class="fas fa-arrow-left"></i></button>
                         </a>
 
-                        <a href='./5.html' class="story-next-button">
-                            <button type="button" class="btn btn-warning story-next-button"><i class="fas fa-arrow-right"></i></button>
-                        </a>
+                        
+                        
+
                     </div>          
                 </div>
             </div>
